[package]
name = "wasmedge_tensorflow_interface"
version = "0.2.0"
authors = ["yiying <yiying@secondstate.io>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/second-state/wasmedge_tensorflow_interface"
license-file = "LICENSE"
description = "A Rust library that provides Rust to WebAssembly developers with syntax for using tensorflow functionality"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wasmedge_tensorflow_interface"
path = "src/lib.rs"
